--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
       </div>
 
       <div class="sm:ml-auto flex-shrink-0 pt-4 sm:pt-0">
-        <a href="CV.pdf" download class="inline-flex items-center px-4 py-2 bg-purple-600 hover:bg-purple-700 text-white font-semibold text-sm rounded-lg shadow-md transition-colors">
+        <a href="docs/CV.pdf" download class="inline-flex items-center px-4 py-2 bg-purple-600 hover:bg-purple-700 text-white font-semibold text-sm rounded-lg shadow-md transition-colors">
           <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
           Télécharger PDF
         </a>
